k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: quorum-node-metrics-exporter
  name: quorum-node-metrics-exporter
  namespace: epi-poc-quorum
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: quorum-node-metrics-exporter
      app.kubernetes.io/instance: quorum-node-metrics-exporter
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/path: /
        prometheus.io/port: "8000"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/name: quorum-node-metrics-exporter
        app.kubernetes.io/instance: quorum-node-metrics-exporter
    spec:
      automountServiceAccountToken: true
      serviceAccountName: quorum-node-metrics-exporter
      containers:
        - image: REGISTRY/REPO:TAG
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          name: main
          ports:
          - containerPort: 8000
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 5m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 65534
            runAsNonRoot: true
            runAsUser: 65534
          volumeMounts:
            - name: cm-settings
              mountPath: /config.json
              subPath: config.json
              readOnly: true
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: cm-settings
          configMap:
            name: quorum-node-metrics-exporter
            defaultMode: 0440  # mount as r
            items:
              - key: config.json
                path: config.json
